src/objects/Demographic__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Demographics</relationshipLabel>
        <relationshipName>Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages_spoken_other_than_English__c</fullName>
        <label>Languages spoken other than English</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minority_woman_disable_veteran_owned__c</fullName>
        <label>Minority/woman/disable veteran owned?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demographics</relationshipLabel>
        <relationshipName>Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demographic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>